--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/vue-select": "^3.16.0",
     "core-js": "latest",
     "register-service-worker": "latest",
+    "tw-elements": "^1.0.0-alpha12",
     "vue": "latest",
     "vue-class-component": "latest",
     "vue-select": "^4.0.0-beta.3"
