--- a/.github/workflows/build_publish.yml
+++ b/.github/workflows/build_publish.yml
@@ -9,6 +9,6 @@ jobs:
     - id: Build-Vue
       uses: xRealNeon/VuePagesAction@1.0.1
       with:
-        username: 'YourGithubName'
-        reponame: 'YourRepoName'
+        username: 'SgkSchedule'
+        reponame: 'web_v2'
         token: ${{ secrets.GITHUB_TOKEN }}
