Fix actions workflow x2

--- a/.github/workflows/build_publish.yml
+++ b/.github/workflows/build_publish.yml
@@ -12,3 +12,4 @@ jobs:
         username: 'SgkSchedule'
         reponame: 'web_v2'
         token: ${{ secrets.GITHUB_TOKEN }}
+        useyarn: true
