--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "register-service-worker": "latest",
     "tw-elements": "^1.0.0-alpha12",
     "vue": "latest",
-    "vue-class-component": "latest",
+    "vue-class-component": "^7.2.6",
     "vue-select": "^4.0.0-beta.3"
   },
   "devDependencies": {
