--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
   "dependencies": {
     "@types/vue-select": "^3.16.0",
     "core-js": "latest",
+    "flowbite": "^1.4.5",
     "register-service-worker": "latest",
-    "tw-elements": "^1.0.0-alpha12",
     "vue": "latest",
     "vue-class-component": "^7.2.6",
     "vue-select": "^4.0.0-beta.3"
