--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@types/vue-select": "^3.16.0",
+    "click-outside-vue3": "^4.0.1",
     "core-js": "latest",
     "flowbite": "^1.4.5",
     "register-service-worker": "latest",
