--- a/.github/workflows/build_publish.yml
+++ b/.github/workflows/build_publish.yml
@@ -15,4 +15,4 @@ jobs:
         username: 'SgkSchedule'
         reponame: 'web_v2'
         token: ${{ secrets.GITHUB_TOKEN }}
-        useyarn: true
+        useyarn: false
